plugins {
    id 'org.springframework.boot' version '2.7.4'
    id 'io.spring.dependency-management' version '1.0.14.RELEASE'
    id 'java'
}

group = 'com'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    implementation 'org.springframework.boot:spring-boot-starter-validation'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'junit:junit:4.13.2'

    runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client', version: '2.7.3'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'com.auth0:java-jwt:3.19.2'
    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:3.2.1'

    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'

	implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.1.0'

	implementation group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.6.8.Final'

	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'

    testImplementation 'org.springframework.security:spring-security-test'

    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux', version: '3.0.5'
}

tasks.named('test') {
    useJUnitPlatform()
}

test {
    useJUnitPlatform()
}
